# yy-interactions-at-the-LHeC

./: Copy_of_Luminosity_Spectrum_Syy_LHeC.ipynb  Luminosity_Spectrum_Syy_LHeC.ipynb  Photon-Photon.ipynb  README.md  Syy.py
DIS2024/: output_values_Syy.txt  trapint_higgsionos_Hamzeh.py
Feynman_Diagrams/: gamma-gamma-LHC_Final.ipynb
JHEP/: output_values_Syy.txt  output_values_WW.txt  output_values_ntegrated_Syy.txt
JHEP/yy_to_yy/ggMatrixElements-main/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
JHEP/yy_to_yy/ggMatrixElements-main/ggMatrixElements/: Constants.h  HelicityAmplitudes.h  MatrixElements.h  Utils.h
JHEP/yy_to_yy/ggMatrixElements-main/src/: Functions.cc  GammaGammaToGammaGammaEFT.cc  GammaGammaToGammaGammaSM.cc  HelicityAmplitudes.cc  PythonModule.cc
JHEP_Final_Results/: README.md
Yll_Comparison/: Syy.py  Yll_Comparison.py
Yll_Mll_Comparison_EPA_cepgen/: Yll_Comparison.py
Yll_Mll_Comparison_EPA_cepgen_higgsinos/: Mll_Comparison_Final.py  Mll_Comparison_v1.py  Yll_Comparison.py  compare_mll_distributions.py  dSigmadY_10_100_100_higgsinos_MN100.py  lpair_higgsino.C  lpair_higgsino.h
Yll_Mll_Comparison_EPA_cepgen_tautau/: Mll_Comparison_v1.py  compare_mll_distributions.py
cepgen_interface/: README.md
dSigmadW_Final_ep_bbbar/: dSigmadW_ep_bbbar_elastic.nb  output_values_muon.txt  trapint_ep_epbbbar_Hamzeh.py  wgrid_2_4_4_0908.py
dSigmadW_Final_ep_bbbar_25April/: dSigmadW_ep_bbbar_elastic.nb  dSigmadW_ep_bbbar_elastic_inelastic.txt  trapint_ep_epbbbar_Hamzeh.py
dSigmadY/: Plot_Hamzeh_Final_Hadi.py  Syy.py  (+2 more)
(+669 files in other folders)
